DesktopV2/DesktopV2.css
/* ... */
.container_ca50b9:has(.avatarWrapper_ba5175[aria-controls]) {
    padding-top: 356px;
    background: none;
}
.container_ca50b9:has(.avatarWrapper_ba5175[aria-controls]) > * {
    pointer-events: all;
}
.panels__58331:has(.avatarWrapper_ba5175[aria-controls]) {
    z-index: 1003;
    pointer-events: none;
}
.panels__58331:has(.avatarWrapper_ba5175[aria-controls]):before {
    display: none;
}

.avatarWrapper_ba5175 {
    position: relative;
    min-width: 32px !important;
    padding: 4px;
    margin-right: 0;
    border-radius: 0;
    background: transparent !important;
    cursor: pointer;
}
.avatarWrapper_ba5175:before {
    content: "";
    position: absolute;
    inset: 0;
    background: var(--background-modifier-selected);
    border-radius: var(--radius-round);
    scale: 0;
}
.full-motion .avatarWrapper_ba5175:before {
    transition: scale .25s ease;
}
.avatarWrapper_ba5175:hover:before, .avatarWrapper_ba5175[aria-controls]:before {
    scale: 1;
}
.nameTag__0e320 {
    display: none;
}
.container_ca50b9 .flex_f5fbb7 {
    width: 100%;
    align-items: center;
}
.container_ca50b9 .flex_f5fbb7:after {
    content: "";
    display: block;
    width: 2px;
    height: 20px;
    margin: 0 9px;
    background: var(--background-modifier-accent-2);
    border-radius: var(--radius-round);
}

.container_ca50b9 .button__4f306 {
    border-radius: var(--radius-md);
    box-shadow: inset 0 0 0 0 var(--background-modifier-accent);
}
.full-motion .container_ca50b9 .button__4f306 {
    transition: .2s ease;
}
.container_ca50b9 .button__4f306:hover {
    box-shadow: inset 0 0 0 1px var(--background-modifier-accent);
}

.container_ca50b9 .button__4f306:last-child {
    margin-left: auto !important;
    order: 1;
}
.container_ca50b9 .flex_f5fbb7:has(button:nth-child(4)) > button:first-child {
    margin-left: auto !important;
    order: 2;
}
.container_ca50b9 .flex_f5fbb7 > button:nth-child(4) {
    position: relative;
    bottom: 350px;
    left: 40px;
    border-radius: var(--radius-round);
    background: var(--input-background);
    transition: opacity .3s ease;
    opacity: 0;
    pointer-events: none;
}
.container_ca50b9:has(.avatarWrapper_ba5175[aria-controls]) .flex_f5fbb7 > button:nth-child(4) {
    transition-delay: .3s;
    opacity: 1;
    pointer-events: all;
}

.tutorialContainer__890ea {
    width: fit-content;
    height: 32px;
    position: fixed;
    bottom: 19px;
    left: 210px;
    transform: translateY(var(--fixedPanelOffset));
    z-index: 1004;
}
.tutorialContainer__890ea > .listItem_fa7b36 {
    width: 32px;
}
.pill_d1140c {
    display: none;
}
.listItemWrapper__1f93b:active {
    transform: none;
}
.tutorialContainer__890ea .wrapper__3af0b, .tutorialContainer__890ea .wrapper__3af0b > svg {
    width: 32px;
    height: 32px;
}
.tutorialContainer__890ea .wrapper__3af0b foreignObject {
    mask: none;
}
.tutorialContainer__890ea .childWrapper__01b9c {
    border-radius: var(--radius-lg);
    color: var(--interactive-normal);
    background-color: transparent;
    box-shadow: inset 0 0 0 0 var(--background-modifier-accent);
}
.full-motion .tutorialContainer__890ea .childWrapper__01b9c {
    transition: .2s ease;
}
.tutorialContainer__890ea .wrapper_d281dd:hover .childWrapper__01b9c, .tutorialContainer__890ea .wrapper_d281dd.selected_f5ec8e .childWrapper__01b9c {
    color: var(--interactive-hover);
    background-color: var(--background-modifier-selected);
    box-shadow: inset 0 0 0 1.5px var(--background-modifier-accent);
}
.tutorialContainer__890ea .childWrapper__01b9c svg {
    overflow: visible;
}
.tutorialContainer__890ea .childWrapper__01b9c path {
    d: path("M12 22a10 10 0 1 0-8.45-4.64c.13.19.11.44-.04.61l-2.06 2.37A1 1 0 0 0 2.2 22H12Z");
}

.tutorialContainer__890ea:has(.lowerBadge__669e7):before {
    content: "";
    position: absolute;
    bottom: 2px;
    right: 2px;
    width: 8px;
    height: 8px;
    background: var(--brand-experiment);
    border: 2px solid var(--background-secondary-alt);
    border-radius: 100%;
    z-index: 1;
    pointer-events: none;
}
.tutorialContainer__890ea .lowerBadge__669e7 {
    display: none;
}

#app-mount:has(.panels__58331:hover, .tutorialContainer__890ea:hover, .recentsIcon__3c4cf:hover) .disabledPointerEvents_bb5546:has(.listItemTooltip__7fa38) {
    width: 250px;
    left: 103px !important;
    display: flex;
    justify-content: center;
}
#app-mount:has(.panels__58331:hover, .tutorialContainer__890ea:hover, .recentsIcon__3c4cf:hover) .listItemTooltip__7fa38 {
    width: fit-content;
    font-size: 14px;
    line-height: 16px;
    font-weight: 500;
    transform-origin: 50% 100%;
    translate: 0 -40px;
}
#app-mount:has(.panels__58331:hover, .tutorialContainer__890ea:hover, .recentsIcon__3c4cf:hover) .listItemTooltip__7fa38 > .tooltipPointer_a79354 {
    top: 100% !important;
    margin-top: 0;
    right: unset;
    left: calc(50% - 5px);
    transform: none;
}

.container__11d72 {
    z-index: 1004;
}

.topControls_d202b0 {
    transform: none !important;
    opacity: 1 !important;
}
.recentsIcon__3c4cf {
    position: fixed;
    bottom: 19px;
    left: 242px;
    transform: translateY(var(--fixedPanelOffset));
    z-index: 1004;
}
.recentsIcon__3c4cf .iconWrapper_af9215 {
    margin: 0;
    width: 32px;
    height: 32px;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: var(--radius-md);
    box-shadow: inset 0 0 0 0 var(--background-modifier-accent);
}
.full-motion .recentsIcon__3c4cf .iconWrapper_af9215 {
    transition: .2s ease;
}
.recentsIcon__3c4cf .iconWrapper_af9215:hover, .recentsIcon__3c4cf .selected_be2668 {
    background: var(--background-modifier-selected);
    box-shadow: inset 0 0 0 1px var(--background-modifier-accent);
}
.recentsIcon__3c4cf .selected_be2668 svg {
    color: var(--interactive-hover);
}
.recentsIcon__3c4cf svg {
    width: 20px;
    height: 20px;
}
/* ... */

